# flight-monitor

./: .gitignore  Dockerfile  README.md  arrivals.json  docker-compose.yaml  pyproject.toml
docs/: Diagrama_flight_monitor.drawio  specs.txt
src/: airport.py  arrivals.json  departures.json  main.py  main_old.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: __init__.py  airplanes.py
src/database/: client.py
src/models/: __init__.py  hangar.py  runway.py
src/models/airplane/: __init__.py  airplanes.py  base.py
src/models/gate/: __init__.py  base.py  gates.py
tests/: test_feature.py  test_unit.py
